# singular

./: .gitpod.yml  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  release.yaml
.gitpod/: Dockerfile
.theia/: settings.json
src/: discovery.rs  kubernetes.rs  lib.rs  main.rs  protocol.rs  proxy.rs  util.rs
